test/failing/badoptions.trunnel

struct x {
  u8 foo;
}

trunnel pragmas opaque, silly, expansive;
